# Youtube-Automation-Pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: comfyui-setup.md
docs/superpowers/plans/: 2026-05-31-phase1-skeleton-and-script-agent.md  2026-05-31-phase2-voice-media-caption-render.md  2026-05-31-phase3-upload-agent.md  2026-06-19-local-sdxl-broll.md
docs/superpowers/specs/: 2026-05-30-youtube-automation-pipeline-design.md  2026-05-31-phase3-upload-agent-design.md  2026-06-19-local-sdxl-broll-design.md
src/yt_auto/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/yt_auto/agents/: caption.py  media.py  render.py  script.py  sources.py  upload.py  voice.py
src/yt_auto/clients/: comfyui.py  elevenlabs.py  gemini.py  pexels.py  whisper.py  youtube.py
src/yt_auto/clients/workflows/: sdxl_txt2img.json
src/yt_auto/ffmpeg/: concat.py  ken_burns.py  prepare_clip.py  probe.py  render.py
src/yt_auto/pipeline/: base.py  context.py
src/yt_auto/prompts/: script_meta.py
src/yt_auto/prompts/templates/: narration.j2  scene_visuals.j2
tests/: conftest.py
tests/fixtures/: comfyui_history_done.json  gemini_narration_response.json  gemini_scene_visuals_response.json  pexels_search_response.json  sample.srt
tests/integration/: test_pexels_client_live.py  test_pipeline_local_live.py  test_script_agent_live.py  test_voice_agent_live.py
tests/unit/: test_caption_agent.py  test_cli.py  test_comfyui_client.py  test_config.py  test_elevenlabs_client.py  test_ffmpeg_concat.py  test_ffmpeg_ken_burns.py  test_ffmpeg_prepare_clip.py  test_ffmpeg_probe.py  test_ffmpeg_render.py  test_gemini_client.py  test_logging.py  test_media_agent.py  test_pexels_client.py  test_pipeline_context.py  test_prompt_templates.py  test_render_agent.py  test_scene_sources.py  test_script_agent.py  test_script_meta.py  test_upload_agent.py  test_voice_agent.py  test_whisper_client.py  test_youtube_client.py
