[project]
name = "yt-auto"
version = "0.1.0"
description = "YouTube automation pipeline"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "jinja2>=3.1",
    "httpx>=0.27",
    "google-genai>=1.0",
    "python-ulid>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_auto"]

[tool.hatch.build.targets.wheel.force-include]
"src/yt_auto/py.typed" = "yt_auto/py.typed"
"src/yt_auto/prompts/templates" = "yt_auto/prompts/templates"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/yt_auto"]

[[tool.mypy.overrides]]
module = "google.genai.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real external APIs (deselect with -m 'not integration')",
]
addopts = "-m 'not integration'"
